[core] Use better garbage collector in headless mode.